--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "header" %>
+    <div class="container-fluid">
+      <%= render "alert" %>
+      <%= yield %>
+    </div>
+    <%= render "footer" %>
   </body>
 </html>
