--- a/app/views/account/profiles/edit.html.erb
+++ b/app/views/account/profiles/edit.html.erb
@@ -1,4 +1,10 @@
-<h1>Editing Profile</h1>
-<hr>
-
-<%= render 'form', profile: @profile %>
+<div class="centered-box">
+  <div class="card">
+    <div class="card-header">
+      Editing Profile
+    </div>
+    <div class="card-body">
+      <%= render 'form', profile: @profile %>
+    </div>
+  </div>
+</div>
