--- a/app/views/account/profiles/show.html.erb
+++ b/app/views/account/profiles/show.html.erb
@@ -1,38 +1,52 @@
-<table class="table table-bordered table-responsive">
-  <tbody>
-    <tr>
-      <th>First Name:</th>
-      <td><%= @profile.first_name %></td>
-    </tr>
-    <tr>
-      <th>Last Name:</th>
-      <td><%= @profile.last_name %></td>
-    </tr>
-    <tr>
-      <th>Phone Number</th>
-      <td><%= @profile.phone_number %></td>
-    </tr>
-    <tr>
-      <th>Address</th>
-      <td><%= @profile.address %></td>
-    </tr>
-    <tr>
-      <th>Postcode</th>
-      <td><%= @profile.postcode %></td>
-    </tr>
-    <tr>
-      <th>City</th>
-      <td><%= @profile.city %></td>
-    </tr>
-    <tr>
-      <th>State</th>
-      <td><%= @profile.state %></td>
-    </tr>
-    <tr>
-      <th>Country</th>
-      <td><%= @profile.country %></td>
-    </tr>
-  </tbody>
-</table>
+<div class="centered-box">
+  <div class="card">
+    <div class="card-header">
+      My Profile
+    </div>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-md-3">
+          <%= image_tag 'avatar.png', class: "img-thumbnail" %>
+        </div>
+        <div class="col-md-9">
+          <table class="table table-bordered table-responsive">
+            <tbody>
+              <tr>
+                <th>Fullname:</th>
+                <td style="width: 100%;"><%= @profile.first_name %> <%= @profile.last_name %></td>
+              </tr>
+              <tr>
+                <th>Phone Number</th>
+                <td><%= @profile.phone_number %></td>
+              </tr>
+              <tr>
+                <th>Address</th>
+                <td><%= @profile.address %></td>
+              </tr>
+              <tr>
+                <th>Postcode</th>
+                <td><%= @profile.postcode %></td>
+              </tr>
+              <tr>
+                <th>City</th>
+                <td><%= @profile.city %></td>
+              </tr>
+              <tr>
+                <th>State</th>
+                <td><%= @profile.state %></td>
+              </tr>
+              <tr>
+                <th>Country</th>
+                <td><%= @profile.country %></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
 
-<%= link_to 'Edit', edit_account_profiles_path, class: "btn btn-primary" %>
+    </div>
+    <div class="card-footer">
+      <%= link_to 'Edit my profile', edit_account_profiles_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+</div>
