--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -5,15 +5,21 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
+      <% if user_signed_in? %>
+        <li class="nav-item active">
+          <%= link_to "Dashboard", dashboard_dashboard_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Clients", dashboard_clients_path, class: "nav-link" %>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+      <% end %>
     </ul>
     <ul class="navbar-nav my-2 my-lg-0">
       <% if user_signed_in? %>
@@ -22,8 +28,8 @@
           <%= image_tag 'avatar.png', class: "rounded-circle img-fluid img-thumbnail", width: 30, style: "margin: -5px 0;" %> <%= current_user.username %>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <%= link_to "My Profile", account_profiles_path, class: "dropdown-item" %>
+          <%= link_to "My Company Profile", account_company_profiles_path, class: "dropdown-item" %>
           <div class="dropdown-divider"></div>
           <%= link_to destroy_user_session_path, method: "delete", class: "dropdown-item text-danger" do %>
             <i class="fa fa-sign-out"></i> Logout
