--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <%= render "admin_header" %>
+    <%= render "header" %>
     <div class="container-fluid">
       <%= render "alert" %>
       <%= yield %>
