--- a/app/views/account/profiles/_form.html.erb
+++ b/app/views/account/profiles/_form.html.erb
@@ -49,6 +49,10 @@
         <th>Country</th>
         <td><%= form.text_field :country, id: :profile_country, class: "form-control" %></td>
       </tr>
+      <tr>
+        <th>Default Picture</th>
+        <td><%= form.text_field :default_picture, id: :profile_default_picture, class: "form-control" %></td>
+      </tr>
     </tbody>
   </table>
 
