--- a/app/views/account/company_profiles/_form.html.erb
+++ b/app/views/account/company_profiles/_form.html.erb
@@ -16,6 +16,11 @@
 </div>
 
 <div class="form-group">
+  <%= f.label :reg_num %>
+  <%= f.text_field :reg_num, id: :company_profile_reg_num, class: "form-control" %>
+</div>
+
+<div class="form-group">
   <%= f.label :contact_number %>
   <%= f.text_field :contact_number, id: :company_profile_contact_number, class: "form-control" %>
 </div>
