--- a/app/views/account/company_profiles/show.html.erb
+++ b/app/views/account/company_profiles/show.html.erb
@@ -1,7 +1,7 @@
 <div class="centered-box">
   <div class="card">
     <div class="card-header">
-      <%= @company_profile.company_name %>
+      <%= @company_profile.company_name %> (<%= @company_profile.reg_num %>)
     </div>
     <div class="card-body">
       <div class="row">
