--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= f.check_box :enterprise %>
-    <%= f.label :enterprise %> Make this account as an Enterprise
+    <%= f.label :enterprise, "Make this account as an Enterprise (trial 7-days)" %> 
   </div>
 
   <div class="actions">
