--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <%= link_to "Clients", dashboard_clients_path, class: "nav-link" %>
         </li>
+        <li class="nav-item">
+          <%= link_to "Quotations", dashboard_quotations_path, class: "nav-link" %>
+        </li>
       <% else %>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
