--- a/app/views/dashboard/clients/index.html.erb
+++ b/app/views/dashboard/clients/index.html.erb
@@ -6,7 +6,9 @@
       <tr>
         <th scope="col">#</th>
         <th scope="col">Contact Person Name</th>
+        <th scope="col">Company Name</th>
         <th scope="col">Contact Number</th>
+        <th scope="col">Quotation?</th>
         <th scope="col">Date Added</th>
         <th scope="col">Action</th>
       </tr>
@@ -16,7 +18,9 @@
         <tr>
           <th><%= i + 1 %></th>
           <td><%= client.contact_person_name %> (<%= client.uniq_id %>)</td>
+          <td><%= client.company_name %></td>
           <td><%= client.contact_person_phone %></td>
+          <td><%= client.quotations.any? ? "Yes" : "No" %></td>
           <td><%= client.created_at.strftime("%d %B %Y") %></td>
           <td>
             <div class="btn-group btn-group-sm">
