--- a/app/views/dashboard/quotations/index.html.erb
+++ b/app/views/dashboard/quotations/index.html.erb
@@ -1,5 +1,5 @@
 <% if @quotations.any? %>
-  <%= link_to "Add new", new_dashboard_quotation_path, class: "btn btn-primary btn-sm pull-right" %>
+  <%= link_to "Add new", new_dashboard_quotation_path, class: "btn btn-primary btn-sm pull-right", data: { turbolinks: false } %>
   <br><br>
   <table class="table table-bordered">
     <thead class="thead-dark">
@@ -22,7 +22,7 @@
           <td><%= quotation.created_at.strftime("%d %B %Y") %></td>
           <td>
             <div class="btn-group btn-group-sm">
-              <%= link_to "Edit", edit_dashboard_quotation_path(quotation), class: "btn btn-primary" %>
+              <%= link_to "Edit", edit_dashboard_quotation_path(quotation), class: "btn btn-primary", data: { turbolinks: false } %>
               <%= link_to "Show", dashboard_quotation_path(quotation), class: "btn btn-secondary" %>
               <%= link_to "Delete", dashboard_quotation_path(quotation), method: :delete, class: "btn btn-danger" %>
             </div>
