--- a/app/views/dashboard/quotations/_item_fields.html.erb
+++ b/app/views/dashboard/quotations/_item_fields.html.erb
@@ -1,5 +1,4 @@
 <div class="nested-fields">
-  <hr>
   <div class="card border-dark mb-3">
     <div class="card-header">
       Item
@@ -16,7 +15,7 @@
             <%= f.label :price, "Unit Price" %>
             <div class="input-group">
               <span class="input-group-addon">$</span>
-              <%= f.text_field :price, class: "form-control price", placeholder: "1500" %>
+              <%= f.number_field :price, class: "form-control price", placeholder: "ex: 1500", min: 1 %>
             </div>
           </div>
         </div>
@@ -64,7 +63,28 @@ $(document).ready(function() {
       var total_mnozi = 0;
       total_mnozi = dep1 * minpre1;
       parseFloat($( topri ).val(total_mnozi));
+      calculateSum();
     });
   });
- });
+
+
+});
+
+function calculateSum() {
+	var sum = 0;
+	$(".total_price").each(function() {
+		if(!isNaN(this.value) && this.value.length!=0) {
+			sum += parseFloat(this.value);
+		}
+	});
+  // get the quotation_sub_total before tax
+  $("#quotation_sub_total").val(sum);
+  tax = $('#quotation_tax_rate').val()
+  // calculate the tax amount
+  var tax_rate = sum * ((tax / 100));
+  parseFloat($('#quotation_tax').val(tax_rate));
+  // calculate the final total price after tax
+  var final_amount = tax_rate += sum
+  parseFloat($('#quotation_total').val(tax_rate));
+}
 </script>
