add default value

--- a/app/views/dashboard/quotations/_form.html.erb
+++ b/app/views/dashboard/quotations/_form.html.erb
@@ -48,7 +48,7 @@
     <div class="form-group">
       <%= f.label :tax_rate %>
       <div class="input-group">
-    <%= f.number_field :tax_rate, id: :quotation_tax_rate, class: "form-control" %>
+    <%= f.number_field :tax_rate, id: :quotation_tax_rate, class: "form-control", value: 0 %>
         <span class="input-group-addon">%</span>
       </div>
     </div>
