--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -1,16 +1,27 @@
-<h2>Resend confirmation instructions</h2>
-
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true %>
+<div class="container">
+  <div class="page-header text-center">
+    <h1>Resend confirmation instructions</h1>
   </div>
+  <hr>
+  <div class="row">
+    <div class="col-4"></div>
+    <div class="col-4 col-md-4">
+      <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
+        <div class="form-group">
+          <%= f.label :username %>
+          <%= f.text_field :username, autofocus: true, class: "form-control" %>
+        </div>
+
+        <%= f.submit "Resend confirmation instructions", class: "btn btn-default btn-block" %>
+      <% end %>
+      <hr>
+      <p class="small">
+        Already have an account? Login <%= link_to "here", login_path %><br/>
+        Don't have an account yet? Create one <%= link_to "here", register_path %>
+      </p>
+    </div>
+    <div class="col-4"></div>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
