--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,39 +1,51 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true %>
+<div class="container">
+  <div class="page-header text-center">
+    <h1>Create An Account</h1>
   </div>
+  <hr>
+  <div class="row">
+    <div class="col-4"></div>
+    <div class="col-4 col-md-4">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
+        <div class="form-group">
+          <%= f.label :username %>
+          <%= f.text_field :username, autofocus: true, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          <em class="pull-right small">(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %>
+          <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+        </div>
+
+        <div class="checkbox">
+          <label>
+            <%= f.check_box :enterprise %> Make this account as an Enterprise (trial 7-days)
+          </label>
+        </div>
+
+        <%= f.submit "Create My Account", class: "btn btn-primary btn-block" %>
+      <% end %>
+      <hr>
+      <p class="small">
+        Already have an account? Login <%= link_to "here", login_path %><br/>
+        Didn't receive confirmation instructions? Click <%= link_to "here", new_user_confirmation_path %>
+      </p>
+    </div>
+    <div class="col-4"></div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.check_box :enterprise %>
-    <%= f.label :enterprise, "Make this account as an Enterprise (trial 7-days)" %> 
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
