add class to the button

--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -14,7 +14,7 @@
           <%= f.text_field :username, autofocus: true, class: "form-control" %>
         </div>
 
-        <%= f.submit "Resend confirmation instructions", class: "btn btn-default btn-block" %>
+        <%= f.submit "Resend confirmation instructions", class: "btn btn-primary btn-block" %>
       <% end %>
       <hr>
       <p class="small">
