--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -15,7 +15,7 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "Send me reset password instructions", class: "btn btn-default btn-block" %>
+          <%= f.submit "Send me reset password instructions", class: "btn btn-primary btn-block" %>
         </div>
       <% end %>
       <hr>
