design the homepage

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,46 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<div class="jumbotron">
+  <h1 class="display-4">Hello, world!</h1>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="my-4">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  </p>
+</div>
+
+<div class="row">
+  <div class="col-4">
+    <img src="https://images.unsplash.com/photo-1425342605259-25d80e320565?auto=format&fit=crop&w=2550&q=80" class="img-thumbnail" style="height:125px;width:100%;">
+  </div>
+  <div class="col-8">
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultricies scelerisque quam, sit amet elementum arcu fermentum eu. Sed ex massa, luctus quis lacus vitae, maximus accumsan diam. Phasellus non finibus libero. Sed euismod erat sed justo posuere fermentum. Donec eget risus nisl. Suspendisse sed finibus turpis. Etiam a mollis nibh</p>
+  </div>
+</div>
+
+<hr>
+
+<div class="row">
+  <div class="col-8">
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultricies scelerisque quam, sit amet elementum arcu fermentum eu. Sed ex massa, luctus quis lacus vitae, maximus accumsan diam. Phasellus non finibus libero. Sed euismod erat sed justo posuere fermentum. Donec eget risus nisl. Suspendisse sed finibus turpis. Etiam a mollis nibh</p>
+  </div>
+  <div class="col-4">
+    <img src="https://images.unsplash.com/photo-1491446559770-3fc03a481cdf?auto=format&fit=crop&w=1650&q=80" class="img-thumbnail" style="height:125px;width:100%;">
+  </div>
+</div>
+
+<hr>
+
+<div class="row">
+  <div class="col-4">
+    <img src="https://images.unsplash.com/photo-1494921210580-95b9c65f35c4?auto=format&fit=crop&w=2390&q=80" class="img-thumbnail" style="height:125px;width:100%;">
+  </div>
+  <div class="col-8">
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultricies scelerisque quam, sit amet elementum arcu fermentum eu. Sed ex massa, luctus quis lacus vitae, maximus accumsan diam. Phasellus non finibus libero. Sed euismod erat sed justo posuere fermentum. Donec eget risus nisl. Suspendisse sed finibus turpis. Etiam a mollis nibh</p>
+  </div>
+</div>
+
+<!-- <hr> -->
+
+<div class="wording-2" style="margin:10px 0;padding:120px 40px; background-color:#34495e;color:#fff">
+  <h1 class="display-4 text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
+</div>
