--- a/app/views/dashboard/quotations/_form.html.erb
+++ b/app/views/dashboard/quotations/_form.html.erb
@@ -46,7 +46,9 @@
     <div class="form-group">
       <%= f.label :sub_total %>
       <div class="input-group">
-        <span class="input-group-addon">$</span>
+        <div class="input-group-prepend">
+          <span class="input-group-text">$</span>
+        </div>
         <%= f.number_field :sub_total, id: :quotation_sub_total, class: "form-control", "readonly" => "readonly" %>
       </div>
     </div>
@@ -55,8 +57,10 @@
     <div class="form-group">
       <%= f.label :tax_rate %>
       <div class="input-group">
-    <%= f.number_field :tax_rate, id: :quotation_tax_rate, class: "form-control", value: 0 %>
-        <span class="input-group-addon">%</span>
+        <%= f.number_field :tax_rate, id: :quotation_tax_rate, class: "form-control", value: 0 %>
+        <div class="input-group-prepend">
+          <span class="input-group-text">%</span>
+        </div>
       </div>
     </div>
   </div>
@@ -64,7 +68,9 @@
     <div class="form-group">
       <%= f.label :tax %>
       <div class="input-group">
-        <span class="input-group-addon">$</span>
+        <div class="input-group-prepend">
+          <span class="input-group-text">$</span>
+        </div>
         <%= f.number_field :tax, id: :quotation_tax, class: "form-control", "readonly" => "readonly" %>
       </div>
     </div>
@@ -74,7 +80,9 @@
 <div class="form-group">
   <%= f.label :total %>
   <div class="input-group">
-    <span class="input-group-addon">$</span>
+    <div class="input-group-prepend">
+      <span class="input-group-text">$</span>
+    </div>
     <%= f.number_field :total, id: :quotation_total, class: "form-control", "readonly" => "readonly" %>
   </div>
 </div>
