--- a/app/views/dashboard/quotations/_item_fields.html.erb
+++ b/app/views/dashboard/quotations/_item_fields.html.erb
@@ -14,7 +14,9 @@
           <div class="form-group">
             <%= f.label :price, "Unit Price" %>
             <div class="input-group">
-              <span class="input-group-addon">$</span>
+              <div class="input-group-prepend">
+                <span class="input-group-text">$</span>
+              </div>
               <%= f.number_field :price, class: "form-control price", placeholder: "ex: 1500", min: 1 %>
             </div>
           </div>
@@ -30,7 +32,9 @@
       <div class="form-group">
         <%= f.label :total_price, "Total Price" %>
           <div class="input-group">
-            <span class="input-group-addon">$</span>
+            <div class="input-group-prepend">
+              <span class="input-group-text">$</span>
+            </div>
             <%= f.text_field :total_price, class: "form-control total_price", "readonly" => "readonly" %>
           </div>
       </div>
