--- a/app/views/dashboard/quotations/index.html.erb
+++ b/app/views/dashboard/quotations/index.html.erb
@@ -6,9 +6,10 @@
       <tr>
         <th scope="col">#</th>
         <th scope="col">Client</th>
-        <th scope="col">Client Company</th>
-        <th scope="col">Total</th>
+        <th scope="col">Quotation No</th>
+        <th scope="col">Total Price</th>
         <th scope="col">Date Added</th>
+        <th scope="col">Valid Until</th>
         <th scope="col">Action</th>
       </tr>
     </thead>
@@ -17,9 +18,10 @@
         <tr>
           <th><%= i + 1 %></th>
           <td><%= quotation.client.contact_person_name %> (<%= quotation.client.uniq_id %>)</td>
-          <td><%= quotation.client.company_name %></td>
+          <td><%= quotation.ref_number %></td>
           <td><%= number_to_currency(quotation.total, unit: "RM") %></td>
           <td><%= quotation.created_at.strftime("%d %B %Y") %></td>
+          <td><%= quotation.valid_until.strftime("%d %B %Y") %></td>
           <td>
             <div class="btn-group btn-group-sm">
               <%= link_to "Edit", edit_dashboard_quotation_path(quotation), class: "btn btn-primary", data: { turbolinks: false } %>
